<resources>
    <string name="app_name">Pyrros</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed. Please try again</string>
    <string name="auth_successful">Authentication successful</string>
    <string name="account_created">Account created successfully</string>


    <string name="fragment_dashboard">Dashboard content will be here</string>
    <string name="fragment_trainer">Trainer content will be here</string>
    <string name="fragment_workouts">Workouts content will be here</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_new_workout">NewWorkoutActivity</string>
    <string name="search_hint">search for exercise...</string>
    <string name="start_new_workout">No exercises added yet, search above or use the drop down list to select an exercise to add to your workout</string>
    <string name="menu_purge">Purge Database</string>
    <string name="menu_add_dummy_items">Dummy Workouts</string>
    <string name="start_workout">Start Workout</string>
    <string name="menu_workout_overview">Workout</string>
    <string name="menu_exercise_history">History</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_exercise_stats">Stats</string>
    <string name="menu_workout_feedback">Feedback</string>

    <string-array name="exercise_categories">
        <item>Biceps</item>
        <item>Triceps</item>
        <item>Shoulders</item>
        <item>Back</item>
        <item>Chest</item>
        <item>Thighs</item>
        <item>Hamstrings</item>
        <item>Calves</item>
        <item>Abdomen</item>
        <item>Olympic lifts</item>
        <item>Bodyweight</item>
        <item>Cardio</item>
    </string-array>

    <string name="weight">Weight</string>
    <string name="reps">Reps</string>
    <string name="save_set">Save Set</string>
    <string name="no_sets_recorded">No sets recorded</string>
    <string name="action_start">Start</string>

    <string name="exercise_history_no_sets_recorded">No sets recorded</string>
    <string name="menu_oldest_first">Oldest first</string>
    <string name="menu_newest_first">Newest first</string>
    <string name="menu_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_settings">Settings</string>
    <string name="pref_unit_system">Unit System</string>
    <string name="pref_choose_units">Choose Unit System</string>
    <string name="pref_unit_default">metric</string>
    <string name="summar_unit_preferences">Sets units for your workouts</string>
    <string name="menu_edit_workout">Edit Workout</string>
    <string name="edit_workout_creator">Creator</string>
    <string name="edit_workout_date">Date</string>
    <string name="edit_workout_name">Name</string>
    <string name="edit_workout_num_exercises">Exercise Count</string>
    <string name="edit_workout_shared">Shared</string>
    <string name="edit_workout_user_count">User Count</string>
    <string name="action_undo">UNDO</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_list_view">List view</string>
    <string name="menu_stats_today">Today</string>
    <string name="menu_stats_this_month">This month</string>
    <string name="menu_stats_last_28_days">Last 28 days</string>
    <string name="menu_stats_this_year">This year</string>
    <string name="menu_stats_all_time">All time</string>
    <string name="menu_stats_this_session">This session</string>
    <string name="menu_stats_this_week">This week</string>
    <string name="menu_stats_last_6_months">Last 6 months</string>
    <string name="pref_stats">Stats</string>
    <string name="menu_sync_exercises">Sync Exercises</string>
    <string name="hint_search">Search exercises</string>
    <string name="menu_filter_exercises">Filter exercises</string>
    <string name="menu_exercises_filter_biceps">Biceps</string>
    <string name="menu_exercises_filter_triceps">Triceps</string>
    <string name="menu_exercises_filter_chest">Chest</string>
    <string name="menu_exercises_filter_shoulders">Shoulders</string>
    <string name="menu_exercises_filter_back">Back</string>
    <string name="menu_exercises_filter_legs">Legs</string>
    <string name="menu_exercises_filter_abs">Abs</string>
    <string name="menu_exercises_filter_full_body">Full Body</string>
    <string name="action_create_workout">CREATE WORKOUT</string>
    <string name="delete_workout">Delete</string>
    <string name="do_workout">Do workout</string>
    <string name="add_to_routine">Add to routine</string>
    <string name="workout_deleted">Workout deleted</string>
    <string name="workout_restored">Workout restored</string>
    <string name="add_set">add set</string>
    <string name="exercise_deleted">Exercise deleted</string>
    <string name="exercises_changed">Exercise order updated</string>
    <string name="exercise_added">Exercise added</string>
    <string name="delete_exercise_warning">All recorded sets will be deleted.</string>
    <string name="action_delete">Delete</string>
    <string name="action_redo">Redo</string>
    <string name="all_changes_undone">No more changes to undo</string>
    <string name="all_changes_redone">No more changes to redo</string>
    <string name="timer_sound">Sound</string>
    <string name="timer_vibrate">Vibrate</string>
    <string name="timer_autostart">Auto-start</string>
    <string name="menu_active_timer">0</string>
    <string name="dismiss">Dismiss</string>
    <string name="routine_add_workout">Add</string>
    <string name="no_exercises">Add exercises</string>
    <string name="action_done">Done</string>
    <string name="menu_edit_routine">Edit routine</string>
    <string name="menu_save_routine">Save</string>
    <string name="add_sets">Sets</string>
    <string name="repetition_tempo">Rep tempo</string>
    <string name="rest_interval">rest interval</string>
    <string name="eccentric">Eccentric</string>
    <string name="pause">Pause</string>
    <string name="concentric">Concentric</string>
    <string name="routine_name">Routine name</string>
    <string name="routine_description">Description</string>
    <string name="error_routine_name">Routine name required</string>
    <string name="new_routines_published">New routines added!</string>

</resources>