<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_logout"
        android:title="@string/menu_logout"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_purge_database"
        android:title="@string/menu_purge"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sync_exercises"
        android:title="@string/menu_sync_exercises"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_create_routine"
        android:title="Create routine"
        android:visible="true"
        app:showAsAction="never" />

</menu>
