<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".WorkoutActivity">

    <item
        android:id="@+id/action_edit_workout"
        android:title="@string/menu_edit_workout"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_pause_timer"
        android:title="Pause Timer"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_resume_timer"
        android:title="Resume Timer"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reset_timer"
        android:title="Reset Timer"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_timer"
        android:title="@string/menu_timer"
        android:visible="false"
        android:icon="@drawable/ic_timer_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_active_timer"
        android:title="@string/menu_active_timer"
        android:visible="false"
        app:showAsAction="always" />

</menu>