<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.zonesciences.pyrros.fragment.EditWorkout.WorkoutPropertiesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:layout_weight="1"
            android:text="@string/edit_workout_date"/>

        <TextView
            android:id="@+id/date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:layout_weight="1"
            android:text="@string/edit_workout_creator"/>

        <TextView
            android:id="@+id/creator_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:layout_weight="1"
            android:text="@string/edit_workout_name"/>

        <TextView
            android:id="@+id/name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:layout_weight="1"
            android:text="@string/edit_workout_num_exercises"/>

        <TextView
            android:id="@+id/num_exercises_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:layout_weight="1"
            android:text="@string/edit_workout_shared"/>

        <TextView
            android:id="@+id/shared_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:layout_weight="1"
            android:text="@string/edit_workout_user_count"/>

        <TextView
            android:id="@+id/user_count_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:layout_weight="1"
            />

    </LinearLayout>

</LinearLayout>
