<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/rep_tempo_eccentric_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toLeftOf="@+id/rep_tempo_pause_layout"
            android:layout_margin="10dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eccentric"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </NumberPicker>

        </LinearLayout>



        <LinearLayout
            android:id="@+id/rep_tempo_pause_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pause"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <NumberPicker
                android:id="@+id/rep_tempo_pause_number_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

        </NumberPicker>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/rep_tempo_concentric_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_toRightOf="@+id/rep_tempo_pause_layout"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/concentric"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </NumberPicker>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>