<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zonesciences.pyrros.fragment.CreateWorkout.SortWorkoutFragment">

    <!--REP TEMPO-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:gravity="left"
            android:textStyle="bold"
            android:textSize="@dimen/subtitle"
            android:layout_margin="5dp"
            android:text="@string/repetition_tempo"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:background="@color/colorAccent">
        </View>

        <TextView
            android:id="@+id/exercise_options_rep_tempo_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_margin="5dp"
            android:paddingBottom="5dp"
            android:text="2-0-1"/>

    </LinearLayout>


    <!--REST INTERVAL-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:gravity="left"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textSize="@dimen/subtitle"
            android:text="@string/rest_interval"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:background="@color/colorAccent">
        </View>

        <TextView
            android:id="@+id/exercise_options_rest_interval_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_margin="5dp"
            android:paddingBottom="5dp"
            android:text="90 secs"/>

    </LinearLayout>

    <!-- ADD SETS -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:gravity="left"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:textSize="@dimen/subtitle"
        android:text="@string/add_sets"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/colorAccent">
    </View>

    <TextView
        android:id="@+id/exercise_options_num_sets_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="8 sets of 12 reps"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/exercise_options_decrease_reps_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="-"/>

        <EditText
            android:id="@+id/exercise_options_num_reps_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            android:hint="Reps"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/exercise_options_increase_reps_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="+"/>

        <Button
            android:id="@+id/exercise_options_add_set"
            style="@style/AppTheme.Positive"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:text="@string/add_set"/>

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/dialog_exercise_options_add_sets_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        tools:listitem="@layout/item_add_sets">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>


