<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/dialog_user_input"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp">

    <TextView
        android:id="@+id/dialog_timer_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set Timer"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/timer_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="00000"
            android:textColorHint="#00FFFFFF"
            android:maxLength="6"
            android:inputType="number" />

        <Button
            android:id="@+id/timer_decrease_time_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_toLeftOf="@id/timer_edit_text"
            android:text="-"/>

        <Button
            android:id="@+id/timer_increase_time_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/timer_edit_text"
            android:text="+"/>

    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <CheckBox
                android:id="@+id/timer_sound_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:buttonTint="@color/colorPrimary"
                android:checked="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timer_sound"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:textSize="@dimen/timer_options"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <CheckBox
                android:id="@+id/timer_vibrate_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:buttonTint="@color/colorPrimary"
                android:checked="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timer_vibrate"
                android:layout_gravity="center_vertical"
                android:gravity="left"
                android:layout_marginLeft="5dp"
                android:textSize="@dimen/timer_options"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <CheckBox
                android:id="@+id/timer_autostart_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:buttonTint="@color/colorPrimary"
                android:checked="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timer_autostart"
                android:layout_gravity="center_vertical"
                android:gravity="left"
                android:layout_marginLeft="5dp"
                android:textSize="@dimen/timer_options"/>

        </LinearLayout>

    </LinearLayout>


    <ImageView
        android:id="@+id/timer_start"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="5dp"
        android:src="@drawable/ic_play_circle_filled_green_500_48dp"
        />

    <ImageView
        android:id="@+id/timer_pause"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_pause_circle_filled_red_500_48dp"
        android:elevation="5dp"
        android:visibility="gone"
        />

</LinearLayout>